--- a/src/njk/_layouts/detail-entry.njk
+++ b/src/njk/_layouts/detail-entry.njk
@@ -5,7 +5,9 @@
   <div class="row">
     <div class="col-sm-4">
       {% block info %}
-        <img src="https://placekitten.com/420/320" alt="" class="img-fluid">
+         <img src="img/pirate.jpg" alt="pirate character" class="img-fluid">
+         <p class="byline">By Crit McGillicutty<br>
+         <span>Island Breeze Tribune</span></p>
       {% endblock %}
     </div>
     <div class="col-sm-8">
